--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.9",
+    "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.13",
     "axios": "^0.21.1",
